# vcam-windows-rs

./: AGENTS.md  Cargo.toml  README.md
crates/vcam-server/: Cargo.toml
crates/vcam-server/src/: activate.rs  broker.rs  class_factory.rs  constants.rs  feed_shared.rs  lib.rs  media_event.rs  media_source.rs  media_stream.rs  registration.rs  test_pattern.rs  video_format.rs
crates/vcamctl/: Cargo.toml
crates/vcamctl/src/: main.rs
crates/vcamfeed-demo/: Cargo.toml
crates/vcamfeed-demo/src/: main.rs
scripts/: manage-vcam.ps1  test-com-frame.ps1
src/: activate.rs  class_factory.rs  constants.rs  lib.rs  main.rs  media_source.rs  media_stream.rs  test_pattern.rs
