[package]
name = "vcam-windows-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vcamctl"
path = "src/main.rs"

[dependencies]
com = "0.6"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
] }
windows-core = "0.58"
