[workspace]
members = [
    "crates/vcam-server",
    "crates/vcamctl",
    "crates/vcamfeed-demo",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
com = "0.6"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
windows-core = "0.58"
